CSS nouvel accueil carrousel

--- a/public/CSS/accueilCarousel.css
+++ b/public/CSS/accueilCarousel.css
@@ -1,12 +1,36 @@
 /*stylisation carrousel*/
+#prez {
+    text-align: center;
+    color: #4A00E0;
+    font-family: Montserrat;
+    margin-top: 16px;
+}
+.carousel {
+    display: flex;
+}
+
+.carousel-inner {
+    margin-top: 16em;
+    margin-left: auto;
+}
 
 .images {
-    width: fit-content;
-    display: block;
+    justify-content: center;
+!important;
+    height: 500px;
+!important;
+    object-fit: cover;
 }
 
 .carousel-control-prev-icon, .carousel-control-next-icon {
-    width: 35px;
-    height: 35px;
-    color: #fc4a1a;
+    width: 48px;
+    height: 48px;
+    /*position: relative;*/
+}
+.carousel-control-prev-icon {
+    justify-content: space-between;
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fc4a1a' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+}
+.carousel-control-next-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fc4a1a' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
 }
