--- a/templates/accueil/accueilfront.html.twig
+++ b/templates/accueil/accueilfront.html.twig
@@ -8,6 +8,7 @@
 
 {% block main %}
 
+    <h1 id="prez">Avec Sortir.com, on se rapproche &#128521;</h1>
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -26,7 +27,8 @@
             </div>
             <div class="carousel-item">
                 <img src="IMAGES/Carousel/people_3.jpg" class="d-block w-100 images" alt="...">
-            </div>            <div class="carousel-item">
+            </div>
+            <div class="carousel-item">
                 <img src="IMAGES/Carousel/people_4.jpg" class="d-block w-100 images" alt="...">
             </div>
             <div class="carousel-item">
