--- a/templates/accueil/accueilfront.html.twig
+++ b/templates/accueil/accueilfront.html.twig
@@ -18,7 +18,7 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
         </ol>
-        <div class="carousel-inner container">
+        <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="IMAGES/Carousel/people_1.jpg" class="d-block w-100 images" alt="...">
             </div>
