--- a/public/CSS/accueilCarousel.css
+++ b/public/CSS/accueilCarousel.css
@@ -23,12 +23,17 @@
 
 .carousel-control-prev-icon, .carousel-control-next-icon {
     /*text-shadow: #f1f2f3 1px 0 10px;*/
-    width: 48px;
-    height: 48px;
+    width: 56px;
+    height: 56px;
+    background-color: #fc4a1a;
+    background-size: auto;
+    /*width: 64px;*/
+    /*height: 64px;*/
+    border-radius: 40px;
 }
-.carousel-control-prev-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fc4a1a' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
-}
-.carousel-control-next-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fc4a1a' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
-}
+/*.carousel-control-prev-icon {*/
+/*    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23f5f5f591' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");*/
+/*}*/
+/*.carousel-control-next-icon {*/
+/*    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23f1f2f300' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");*/
+/*}*/
