--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,10 +12,11 @@
     {% block accueilCss %}{% endblock %}
     {% block accueilCarouselCss %}{% endblock %}
     {% block connexionCss %}{% endblock %}
+    {% block listeAdminCss %}{% endblock %}
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
-    <title>{% block title %}Sortir | {% endblock %}</title>
+    <title>{% block title %} Sortir | {% endblock %}</title>
 </head>
 <body>
 
