--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -8,6 +8,15 @@ body{
     background: #4A00E0;  /* fallback for old browsers */
 }
 
+hr{
+    border-top: 1px solid white;
+}
+
+.navbarSortir {
+    background-color: #4A00E0;
+    color: white;
+}
+
 #wrapper {
     overflow-x: hidden;
 }
@@ -37,16 +46,23 @@ body{
     margin-left: auto;
 }
 
+.navbar-light .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgb(255, 255, 255)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.navbar-light .navbar-nav .nav-link,
+.navbar-light .navbar-nav .active > .nav-link,
+.navbar-light:hover .navbar-nav:hover .nav-link:hover
+{
+    color: white;
+}
+
 #sidebar-wrapper a{
     color: white;
 }
 
 #sidebar-wrapper li{
     margin-bottom: 16px;
-}
-
-#sidebar-wrapper hr{
-    border-top: 1px solid rgba(255, 255, 255, 1);
 }
 
 #sidebar-wrapper .list-group {
@@ -62,7 +78,7 @@ body{
     margin-left: 0;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
     #sidebar-wrapper {
         margin-left: 0;
     }
@@ -74,5 +90,9 @@ body{
 
     #wrapper.toggled #sidebar-wrapper {
         margin-left: -15rem;
+    }
+
+    #sidebar-wrapper hr{
+        border-top: 1px solid rgba(255, 255, 255, 1);
     }
 }
