--- a/public/CSS/listeAdmin.css
+++ b/public/CSS/listeAdmin.css
@@ -6,18 +6,47 @@
 }
 
 /*La li*/
-.liste  {
-    background-color: #e36414;
-    margin: 4px;
-    border-radius: 24px; !important;
-    border-color: #4A00E0;
-}
+/*.liste  {*/
+/*    background-color: #e36414;*/
+/*    margin: 4px;*/
+/*    border-radius: 24px; !important;*/
+/*    border-color: #4A00E0;*/
+/*}*/
 
 /*le a */
-.liste {
-    text-decoration: none;
-    color: #f1f2f3; !important;
+/*.liste {*/
+/*    text-decoration: none;*/
+/*    color: #000000; !important;*/
+/*}*/
+/*#page-content-wrapper {*/
+/*    background-color: #f1f2f3;*/
+/*}*/
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin: 10px; !important;
 }
-#page-content-wrapper {
-    background-color: #f1f2f3;
+
+/*.container > * {*/
+/*    flex: 1 0 30%;*/
+/*}*/
+
+.cardUtilisateur {
+
+    /*flex-direction: row; !important;*/
+    /*justify-content: space-around;*/
+    /*flex: 0 0 100%;*/
+    /*flex: 1 0 50%;*/
+    /*margin-top: 10px;*/
+    /*margin-left: 10px;*/
+    /*margin-right: 0px; !important;*/
+    background: #4A00E0;
+    height: 200px;
+    width: 200px;
+}
+.cardUtilisateurBis {
+    background: #4A00E0;
+    height: 200px;
+    width: 200px;
 }
