--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -134,8 +134,10 @@
                 <div class="box container-fluid">
                     {% block main %}{% endblock %}
                 </div>
+{#                <div class="container-fluid">#}
+                    {% block test %} {% endblock %}
+{#                </div>#}
             </main>
-
             <footer></footer>
         </div>
     </div>
