mise en forme campus ville

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,7 @@
     {% block accueilCarouselCss %}{% endblock %}
     {% block connexionCss %}{% endblock %}
     {% block listeAdminCss %}{% endblock %}
+    {% block campusVilleCss %}{% endblock %}
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
