creation sortie fait

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
     {% block connexionCss %}{% endblock %}
     {% block listeAdminCss %}{% endblock %}
     {% block campusVilleCss %}{% endblock %}
+    {% block creationSortieCss %}{% endblock %}
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
