--- a/templates/cities/villes.html.twig
+++ b/templates/cities/villes.html.twig
@@ -10,20 +10,24 @@
 
 <h1 class="text-center mt-5">Gérer les villes</h1>
 
-    <div class="content-recherche">
-        <h2>Filtrer les villes</h2>
+    <div class="row">
 
-        <form method="get" action="villes.html.twig">
-            <div class="form-group row">
-                <label class="col-4">Le nom contient :</label>
-                <div class="col-4"><input class="form-control" type="text" placeholder="Ville"></div>
-                <div class="col-4"><button type="submit" class="btn btn-violet mb-2">Rechercher</button></div>
-            </div>
-        </form>
+        <div class="content-recherche">
+            <h2>Filtrer les villes</h2>
+
+            <form method="get" action="villes.html.twig">
+                <div class="form-group row">
+                    <label class="col-4 my-auto">Le nom contient :</label>
+                    <div class="col-4 my-auto"><input class="form-control" type="text" placeholder="Ville"></div>
+                    <div class="col-4"><button type="submit" class="btn btn-orange mb-2">Rechercher</button></div>
+                </div>
+            </form>
+        </div>
+
     </div>
 
     <div>
-        <table class="table table-striped">
+        <table class="mx-auto table table-striped">
 
             <thead>
                 <tr>
@@ -47,7 +51,7 @@
                 <tr>
                     <td><input name="ville" class="form-control" type="text" placeholder="Nouvelle ville"></td>
                     <td><input name="campus" class="form-control" type="text" placeholder="Nouveau code codal"></td>
-                    <td><button type="submit" class="btn btn-violet mb-2">Ajouter</button></td>
+                    <td><button type="submit" class="btn btn-orange mb-2">Ajouter</button></td>
                 </tr>
             </tfoot>
 
