--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -128,15 +128,15 @@
                 </ul>
             </div>
         </nav>
+{#        <div>#}
+{#            {% block test %} {% endblock %}#}
+{#        </div>#}
 
         <div class="container-fluid">
             <main>
                 <div class="box container-fluid">
                     {% block main %}{% endblock %}
                 </div>
-{#                <div class="container-fluid">#}
-                    {% block test %} {% endblock %}
-{#                </div>#}
             </main>
             <footer></footer>
         </div>
