--- a/public/CSS/listeAdmin.css
+++ b/public/CSS/listeAdmin.css
@@ -1,6 +1,6 @@
 #utilisateurs {
     text-align: center;
-    color: #4A00E0;
+    color: #000000;
     font-family: Montserrat;
     margin: 32px;
 }
@@ -21,32 +21,52 @@
 /*#page-content-wrapper {*/
 /*    background-color: #f1f2f3;*/
 /*}*/
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    margin: 10px; !important;
-}
+/*.container {*/
+/*    display: flex;*/
+/*    flex-wrap: wrap;*/
+/*    !*flex-direction: row;*!*/
+/*}*/
 
 /*.container > * {*/
 /*    flex: 1 0 30%;*/
 /*}*/
 
 .cardUtilisateur {
-
-    /*flex-direction: row; !important;*/
-    /*justify-content: space-around;*/
-    /*flex: 0 0 100%;*/
-    /*flex: 1 0 50%;*/
-    /*margin-top: 10px;*/
-    /*margin-left: 10px;*/
-    /*margin-right: 0px; !important;*/
-    background: #4A00E0;
-    height: 200px;
-    width: 200px;
+    /*flex-wrap: nowrap;*/
+    background-color: #4A00E0;
+    height: 16em;
+    width: 24em;
+    border-radius: 20px;
+    margin-bottom: 8em;
+    margin-left: 4em;
 }
-.cardUtilisateurBis {
-    background: #4A00E0;
-    height: 200px;
-    width: 200px;
+/*.row {*/
+/*    justify-content: center;*/
+/*}*/
+.userPseudo {
+    color: #f1f2f3;
+    /*text-align: center;*/
+    font-size: 2.2em;
+    /*margin: 48px;*/
+}
+.photo {
+    height: 100px;
+    width: 100px;
+    border-radius: 50px;
+    background-color: #f1f2f3;
+    justify-content: center;
+    /*margin-top: 10px;*/
+    margin: 32px auto 32px auto;
+}
+.voir {
+    text-decoration: none;
+    text-align: center;
+    color: #f1f2f3;
+}
+#nono {
+    text-decoration: none;
+    color: #e36414;
+    /*font-weight: bolder;*/
+    font-family:Montserrat;
+    font-size: 1.2em;
 }
