--- a/templates/compte/list.html.twig
+++ b/templates/compte/list.html.twig
@@ -8,42 +8,16 @@
 
 {% block main %}
     <h1 class="text-center" id="utilisateurs">Les utilisateurs</h1>
-{#    {% set myVal = 50 %}#}
-{#    <section>#}
-{#        <table class="table table-striped">#}
-{#            <thead>#}
-{#            <tr>#}
-{#                <th scope="col">#</th>#}
-{#                <th scope="col">Pseudo</th>#}
-{#                <th scope="col">Nom</th>#}
-{#                <th scope="col">Prénom</th>#}
-{#            </tr>#}
-{#            </thead>#}
-{#            <tbody>#}
-    <div class="cardUtilisateur">
-
-    </div>
-    <div class="cardUtilisateurBis">
-
-    </div>
-            {% for accounts in account %}
-{#            #}{# test tableau #}
-{#            {% set counter = ( counter | default(0) ) + 1 %}#}
-
-{#            <tr>#}
-{#                <th scope="row"><a class="liste" href="{{ path('detail', {'id': accounts.id}) }}" title="{{ accounts.pseudo }}">{{ counter}}</a></th>#}
-{#                <td><a class="liste" href="{{ path('detail', {'id': accounts.id}) }}" title="{{ accounts.pseudo }}">{{ accounts.pseudo | capitalize }}</a></td>#}
-{#                <td><a class="liste" href="{{ path('detail', {'id': accounts.id}) }}" title="{{ accounts.pseudo }}">{{ accounts.prenom | capitalize }}</a></td>#}
-{#                <td><a class="liste" href="{{ path('detail', {'id': accounts.id}) }}" title="{{ accounts.pseudo }}">{{ accounts.nom | capitalize }}</a></td>#}
-{#            </tr>#}
-{#            #}{# test tableau #}
-
-{#            <div class="test">#}
-{#                <div class="cardUtilisateur">#}
-
-{#                </div>#}
-{#                <a class="liste" href="{{ path('detail', {'id': accounts.id}) }}" title="{{ accounts.pseudo }}">{{ accounts.prenom | capitalize }}</a>#}
-{#            </div>#}
+    <div class="row">
+        {% for accounts in account %}
+            <div class="d-flex justify-content-around col-4">
+                <div class="cardUtilisateur">
+                    <div class="photo"></div>
+                    <h3 class="text-center align-middle userPseudo">{{ accounts.pseudo | capitalize }}</h3>
+                    <p class="voir align-bottom text-center"><a id="nono" href="{{ path('detail', {'id': accounts.id}) }}"
+                                                                title="{{ accounts.pseudo }}">Voir le profil</a></p>
+                </div>
+            </div>
         {% endfor %}
-{#    </section>#}
+    </div>
 {% endblock %}
