--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,7 @@
     {% block listeAdminCss %}{% endblock %}
     {% block campusVilleCss %}{% endblock %}
     {% block creationSortieCss %}{% endblock %}
+    {% block annulationSortieCss %}{% endblock %}
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
