--- a/templates/compte/detail.html.twig
+++ b/templates/compte/detail.html.twig
@@ -12,8 +12,7 @@
             <div class="card">
                 <div class="card-body">
                     <img class="profil-picture"
-{#                         src="{{ asset('images/profilePicture/5f081744d36a1.jpeg') }}"#}
-                         src="/images/profilePicture/{{ app.user.photo.photoName }}"
+                         src="{{ asset('images/profilePicture/'~app.user.photo.photoName) }}"
                          alt="La photo de profil">
                 </div>
             </div>
