--- a/templates/edit_account/edit.html.twig
+++ b/templates/edit_account/edit.html.twig
@@ -14,7 +14,7 @@
             <div class="card">
                 <div class="card-body">
                     <img class="profil-picture"
-                         src="/images/profilePicture/{{ app.user.photo.photoName }}"
+{#                         src="{{ asset('images/profilePicture/'~app.user.photo.photoName) }}"#}
                          alt="La photo de profil">
                 </div>
             </div>
